New in v0.5.18 (2009/05/??)
---------------------------
Added support for RackSpace's CloudFiles, cf+http.

Only half of this bug is fixed but it's still useful.
bug #21792: pipe call fails with an error OSError:
            [Errno 24] Too many open files
https://savannah.nongnu.org/bugs/?21792


New in v0.5.17 (2009/05/04)
---------------------------
Removed one line of code left from some testing that I
did that caused a crash when the target dir was empty
and collection-status was requested.

Moved from using the df command to get temp space
availability to Python's os.statvfs() call.  Not all
df commands work the same way.

patch #6813: Making changelist easy to read
https://savannah.nongnu.org/patch/?6813

patch #6814: Ignore comments in filelists
https://savannah.nongnu.org/patch/?6814


New in v0.5.16 (2009/04/21)
---------------------------
bug #24825: duplicity warn on insufficient TMPDIR
            space availability and low max open
            file limits pre-backup.
https://savannah.nongnu.org/bugs/?24825

bug #25594: wrong backup statistics
https://savannah.nongnu.org/bugs/?25594

bug #25976: Password requested when not needed.
https://savannah.nongnu.org/bugs/?25976

patch #6806: More graceful handling of old
             --short-filename files
https://savannah.nongnu.org/patch/?6806

Added tilde and variable expansion to the source or
target argument that is not a URL.


New in v0.5.15 (2009/04/09)
---------------------------
FTP backend was failing on PureFTPd when the "-x ''"
option was removed from the second ncftpls popen, a fix
that was implemented due to bug #24741.  This fix does
the ls in one pass by extracting the last entry on the
'ls -l' listing.

If a file is unreadable due to access rights or other
non-fatal errors, put out error message and continue
rather than dying messily with a traceback.

Added tilde '~' expansion and variable expansion in the
options that require a filename.  You can now have this