@@ -588,19 +588,17 @@ filesystem path.
 Formats of each of the URL schemes follow:
 .PP
 .RS
-ssh://user[:password]@other.host[:port]/some_dir
+cf+http://container_name
 .PP
-scp://user[:password]@other.host[:port]/some_dir
+file:///some_dir
 .PP
 ftp://user[:password]@other.host[:port]/some_dir
+.PP
+hsi://user[:password]@other.host/some_dir
 .PP
 imap://user[:password]@host.com[/from_address_prefix]
 .PP
 imaps://user[:password]@host.com[/from_address_prefix]
-.PP
-hsi://user[:password]@other.host/some_dir
-.PP
-file:///some_dir
 .PP
 rsync://user[:password]@other.host[:port]::/module/some_dir
 .PP
@@ -612,11 +610,15 @@ s3://host/bucket_name[/prefix]
 .PP
 s3+http://bucket_name[/prefix]
 .PP
+scp://user[:password]@other.host[:port]/some_dir
+.PP
+ssh://user[:password]@other.host[:port]/some_dir
+.PP
+tahoe://alias/directory
+.PP
 webdav://user[:password]@other.host/some_dir
 .PP
 webdavs://user[:password]@other.host/some_dir
-.PP
-cf+http://container_name
 
 .RE
 
